--- a/app/src/main/res/layout/rom_list_item.xml
+++ b/app/src/main/res/layout/rom_list_item.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
+    android:layout_marginVertical="-10dp"
 
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
