--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,28 +7,34 @@
     android:background="#FFFFFF"
     tools:context=".MainActivity">
 
-    <androidx.cardview.widget.CardView
+    <FrameLayout
         android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="15dp"
-        app:cardCornerRadius="20dp"
+        app:cardCornerRadius="0dp"
         app:layout_constraintTop_toTopOf="parent">
 
-        <com.wuhenzhizao.titlebar.widget.CommonTitleBar
-            android:id="@+id/titlebar"
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:centerSearchBg="@drawable/searchbarbg_white"
-            app:centerSearchRightType="delete"
-            app:centerType="searchView"
-            app:fillStatusBar="true"
-            app:leftType="none"
-            app:rightText="确定"
-            app:rightType="textView"
-            app:titleBarColor="#FFFFFF" />
+            android:background="@color/white"
+            app:theme="@style/Theme.AppCompat.Light" >
+            <TextView
 
-    </androidx.cardview.widget.CardView>
+                android:id="@+id/titleCodePrinter"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="monospace"
+                android:textSize="12sp"
+                android:textColor="#000000"
+                android:background="@android:color/white"
+                android:padding="8dp" />
+
+        </androidx.appcompat.widget.Toolbar>
+
+
+    </FrameLayout>
 
 
     <LinearLayout
