--- a/app/src/main/res/layout/part_new_dialog.xml
+++ b/app/src/main/res/layout/part_new_dialog.xml
@@ -27,6 +27,14 @@
                 android:textColor="@color/black"
                 android:textSize="20dp"
                 android:textStyle="bold" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="left"
+                android:text="The whole app can hold partition alignment automaticly (4k)"
+                android:textColor="#FFC107"
+                android:textSize="15dp"
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -155,20 +163,13 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="5"
                     android:width="0dp"
-                    android:gravity="center"
+                    android:gravity="right"
                     android:text="5014515"
                     android:textColor="@color/black" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="2"
-                    android:width="0dp"
-                    android:gravity="center"
-                    android:textColor="@color/black"></TextView>
             </LinearLayout>
             <LinearLayout
-                android:layout_marginBottom="20dp"
+
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
@@ -187,18 +188,34 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="5"
                     android:width="0dp"
-                    android:gravity="center"
+                    android:gravity="right"
                     android:text="5014515"
                     android:textColor="@color/black" />
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_marginBottom="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="2"
-                    android:width="0dp"
-                    android:gravity="center"
-                    android:textColor="@color/black"></TextView>
+                    android:text="Available from set start(byte): "
+                    android:textColor="@color/black" />
+
+                <TextView
+                    android:id="@+id/newDialog_available_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="5"
+                    android:gravity="right"
+                    android:text="5014515"
+                    android:textColor="@color/black" />
+
             </LinearLayout>
+
 
 
             <LinearLayout
