--- a/app/src/main/res/layout/dialog_list_items.xml
+++ b/app/src/main/res/layout/dialog_list_items.xml
@@ -6,6 +6,28 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+    <LinearLayout
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Switch
+            android:id="@+id/fw_dialog_list_items_switch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Select All  "
+            android:checked="false"
+            android:layout_marginLeft="25dp"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Export list"
+            />
+    </LinearLayout>
+
 
     <ListView
         android:id="@+id/listViewItems"
